.antlr/MiniGoParser.py
# Generated from d:/Educational_program/242/CO3005-Principles of Programming Languages/Project/CO3005-Principles of Programming Languages/Assignment-4/assignment4/initial/MiniGo.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MiniGoParser ( Parser ):

    grammarFileName = "MiniGo.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'int'", "'float'", "'string'", "'boolean'", 
                     "'const'", "'var'", "'return'", "'type'", "'func'", 
                     "'struct'", "'interface'", "'if'", "'else'", "'for'", 
                     "'continue'", "'break'", "'range'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'=='", "'!='", "'<'", "'<='", "'>'", 
                     "'>='", "'&&'", "'||'", "'!'", "'='", "':='", "'+='", 
                     "'-='", "'*='", "'/='", "'%='", "'.'", "','", "':'", 
                     "';'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'nil'", 
                     "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "Key_type_int", "Key_type_float", "Key_type_string", 
                      "Key_type_boolean", "Key_decl_const", "Key_decl_var", 
                      "Key_return", "Key_type", "Key_func", "Key_struct", 
                      "Key_interface", "Key_if", "Key_else", "Key_loop_for", 
                      "Key_loop_continue", "Key_loop_break", "Key_range", 
                      "Ope_plus", "Ope_minus", "Ope_multi", "Ope_div", "Ope_mod", 
                      "Ope_equal", "Ope_nequal", "Ope_let", "Ope_leq", "Ope_get", 
                      "Ope_geq", "Ope_and", "Ope_or", "Ope_not", "Ope_assign", 
                      "Ope_init", "Ope_assign_plus", "Ope_assign_minus", 
                      "Ope_assign_multi", "Ope_assign_div", "Ope_assign_mod", 
                      "Ope_select", "Comma", "Colon", "Semicolon", "Lparen", 
                      "Rparen", "Lsquare", "Rsquare", "Lcurly", "Rcurly", 
                      "Literal_nil", "Literal_true", "Literal_false", "Literal_dec", 
                      "Literal_bin", "Literal_oct", "Literal_hex", "Literal_float", 
                      "Literal_string", "Identifier", "NL", "WS", "SL_COMMENT", 
                      "ML_COMMENT", "UNCLOSE_STRING", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_decllist = 1
    RULE_decl = 2
    RULE_const_decl = 3
    RULE_end_stmt = 4
    RULE_var_decl = 5
    RULE_var_decl_expl = 6
    RULE_var_value = 7
    RULE_data_type = 8
    RULE_primitive_type = 9
    RULE_array_type = 10
    RULE_dimension_list = 11
    RULE_dimension = 12
    RULE_size = 13
    RULE_var_decl_infer = 14
    RULE_var_decl_nil = 15
    RULE_type_decl = 16
    RULE_struct_decl = 17
    RULE_field_set = 18
    RULE_field_list = 19
    RULE_field_decl = 20
    RULE_interface_decl = 21
    RULE_interface_method_set = 22
    RULE_interface_method_list = 23
    RULE_interface_method_decl = 24
    RULE_interface_method_param_set = 25
    RULE_interface_method_param_list = 26
    RULE_interface_method_param = 27
    RULE_id_list = 28
    RULE_func_decl = 29
    RULE_param_set = 30
    RULE_param_list = 31
    RULE_param = 32
    RULE_func_body = 33
    RULE_stmt_set = 34
    RULE_stmt_list = 35
    RULE_method_decl = 36
    RULE_receiver = 37
    RULE_expr = 38
    RULE_expr1 = 39
    RULE_expr2 = 40
    RULE_ope_relation = 41
    RULE_expr3 = 42
    RULE_expr4 = 43
    RULE_expr5 = 44
    RULE_expr6 = 45
    RULE_expr7 = 46
    RULE_expr8 = 47
    RULE_func_call = 48
    RULE_argument_set = 49
    RULE_argument_list = 50
    RULE_argument = 51
    RULE_prim_literal = 52
    RULE_literal_int = 53
    RULE_literal_bool = 54
    RULE_stmt = 55
    RULE_assign_stmt = 56
    RULE_lhs = 57
    RULE_access_list = 58
    RULE_access = 59
    RULE_array_access = 60
    RULE_struct_access = 61
    RULE_ope_assign = 62
    RULE_rhs = 63
    RULE_literal_array = 64
    RULE_full_array_literal = 65
    RULE_partial_array_literal = 66
    RULE_array_element_set = 67
    RULE_array_element_list = 68
    RULE_array_element = 69
    RULE_literal_struct = 70
    RULE_struct_element_set = 71
    RULE_struct_element_list = 72
    RULE_struct_element = 73
    RULE_if_stmt = 74
    RULE_matched = 75
    RULE_unmatched = 76
    RULE_condition = 77
    RULE_if_stmt_body = 78
    RULE_else_stmt_list = 79
    RULE_else_stmt_body = 80
    RULE_for_stmt = 81
    RULE_for_basic = 82
    RULE_for_icu = 83
    RULE_init = 84
    RULE_update = 85
    RULE_for_range = 86
    RULE_array_instance = 87
    RULE_index = 88
    RULE_value = 89
    RULE_for_body = 90
    RULE_break_stmt = 91
    RULE_continue_stmt = 92
    RULE_call_stmt = 93
    RULE_func_call_stmt = 94
    RULE_method_call_stmt = 95
    RULE_method_call = 96
    RULE_return_stmt = 97

    ruleNames =  [ "program", "decllist", "decl", "const_decl", "end_stmt", 
                   "var_decl", "var_decl_expl", "var_value", "data_type", 
                   "primitive_type", "array_type", "dimension_list", "dimension", 
                   "size", "var_decl_infer", "var_decl_nil", "type_decl", 
                   "struct_decl", "field_set", "field_list", "field_decl", 
                   "interface_decl", "interface_method_set", "interface_method_list", 
                   "interface_method_decl", "interface_method_param_set", 
                   "interface_method_param_list", "interface_method_param", 
                   "id_list", "func_decl", "param_set", "param_list", "param", 
                   "func_body", "stmt_set", "stmt_list", "method_decl", 
                   "receiver", "expr", "expr1", "expr2", "ope_relation", 
                   "expr3", "expr4", "expr5", "expr6", "expr7", "expr8", 
                   "func_call", "argument_set", "argument_list", "argument", 
                   "prim_literal", "literal_int", "literal_bool", "stmt", 
                   "assign_stmt", "lhs", "access_list", "access", "array_access", 
                   "struct_access", "ope_assign", "rhs", "literal_array", 
                   "full_array_literal", "partial_array_literal", "array_element_set", 
                   "array_element_list", "array_element", "literal_struct", 
                   "struct_element_set", "struct_element_list", "struct_element", 
                   "if_stmt", "matched", "unmatched", "condition", "if_stmt_body", 
                   "else_stmt_list", "else_stmt_body", "for_stmt", "for_basic", 
                   "for_icu", "init", "update", "for_range", "array_instance", 
                   "index", "value", "for_body", "break_stmt", "continue_stmt", 
                   "call_stmt", "func_call_stmt", "method_call_stmt", "method_call", 
                   "return_stmt" ]

    EOF = Token.EOF
    Key_type_int=1
    Key_type_float=2
    Key_type_string=3
    Key_type_boolean=4
    Key_decl_const=5
    Key_decl_var=6
    Key_return=7
    Key_type=8
    Key_func=9
    Key_struct=10
    Key_interface=11
    Key_if=12
    Key_else=13
    Key_loop_for=14
    Key_loop_continue=15
    Key_loop_break=16
    Key_range=17
    Ope_plus=18
    Ope_minus=19
    Ope_multi=20
    Ope_div=21
    Ope_mod=22
    Ope_equal=23
    Ope_nequal=24
    Ope_let=25
    Ope_leq=26
    Ope_get=27
    Ope_geq=28
    Ope_and=29
    Ope_or=30
    Ope_not=31
    Ope_assign=32
    Ope_init=33
    Ope_assign_plus=34
    Ope_assign_minus=35
    Ope_assign_multi=36
    Ope_assign_div=37
    Ope_assign_mod=38
    Ope_select=39
    Comma=40
    Colon=41
    Semicolon=42
    Lparen=43
    Rparen=44
    Lsquare=45
    Rsquare=46
    Lcurly=47
    Rcurly=48
    Literal_nil=49
    Literal_true=50
    Literal_false=51
    Literal_dec=52
    Literal_bin=53
    Literal_oct=54
    Literal_hex=55
    Literal_float=56
    Literal_string=57
    Identifier=58
    NL=59
    WS=60
    SL_COMMENT=61
    ML_COMMENT=62
    UNCLOSE_STRING=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decllist(self):
            return self.getTypedRuleContext(MiniGoParser.DecllistContext,0)


        def EOF(self):
            return self.getToken(MiniGoParser.EOF, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = MiniGoParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 196
            self.decllist()
            self.state = 197
            self.match(MiniGoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DecllistContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def decl(self):
            return self.getTypedRuleContext(MiniGoParser.DeclContext,0)


        def decllist(self):
            return self.getTypedRuleContext(MiniGoParser.DecllistContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decllist

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecllist" ):
                listener.enterDecllist(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecllist" ):
                listener.exitDecllist(self)




    def decllist(self):

        localctx = MiniGoParser.DecllistContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_decllist)
        try:
            self.state = 203
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 199
                self.decl()
                self.state = 200
                self.decllist()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 202
                self.decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def const_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Const_declContext,0)


        def var_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Var_declContext,0)


        def type_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Type_declContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Func_declContext,0)


        def method_decl(self):
            return self.getTypedRuleContext(MiniGoParser.Method_declContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDecl" ):
                listener.enterDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDecl" ):
                listener.exitDecl(self)




    def decl(self):

        localctx = MiniGoParser.DeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_decl)
        try:
            self.state = 210
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 205
                self.const_decl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 206
                self.var_decl()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 207
                self.type_decl()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 208
                self.func_decl()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 209
                self.method_decl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Const_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Key_decl_const(self):
            return self.getToken(MiniGoParser.Key_decl_const, 0)

        def Identifier(self):
            return self.getToken(MiniGoParser.Identifier, 0)

        def Ope_assign(self):
            return self.getToken(MiniGoParser.Ope_assign, 0)

        def var_value(self):
            return self.getTypedRuleContext(MiniGoParser.Var_valueContext,0)


        def end_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.End_stmtContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_const_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConst_decl" ):
                listener.enterConst_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConst_decl" ):
                listener.exitConst_decl(self)




    def const_decl(self):

        localctx = MiniGoParser.Const_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_const_decl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 212
            self.match(MiniGoParser.Key_decl_const)
            self.state = 213
            self.match(MiniGoParser.Identifier)
            self.state = 214
            self.match(MiniGoParser.Ope_assign)
            self.state = 215
            self.var_value()
            self.state = 216
            self.end_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class End_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NL(self):
            return self.getToken(MiniGoParser.NL, 0)

        def Semicolon(self):
            return self.getToken(MiniGoParser.Semicolon, 0)

        def getRuleIndex(self):
            return MiniGoParser.RULE_end_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnd_stmt" ):
                listener.enterEnd_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnd_stmt" ):
                listener.exitEnd_stmt(self)




    def end_stmt(self):

        localctx = MiniGoParser.End_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_end_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 218
            _la = self._input.LA(1)
            if not(_la==42 or _la==59):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_declContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def var_decl_expl(self):
            return self.getTypedRuleContext(MiniGoParser.Var_decl_explContext,0)


        def var_decl_infer(self):
            return self.getTypedRuleContext(MiniGoParser.Var_decl_inferContext,0)


        def var_decl_nil(self):
            return self.getTypedRuleContext(MiniGoParser.Var_decl_nilContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl" ):
                listener.enterVar_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl" ):
                listener.exitVar_decl(self)




    def var_decl(self):

        localctx = MiniGoParser.Var_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_var_decl)
        try:
            self.state = 223
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 220
                self.var_decl_expl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 221
                self.var_decl_infer()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 222
                self.var_decl_nil()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_decl_explContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Key_decl_var(self):
            return self.getToken(MiniGoParser.Key_decl_var, 0)

        def Identifier(self):
            return self.getToken(MiniGoParser.Identifier, 0)

        def data_type(self):
            return self.getTypedRuleContext(MiniGoParser.Data_typeContext,0)


        def Ope_assign(self):
            return self.getToken(MiniGoParser.Ope_assign, 0)

        def var_value(self):
            return self.getTypedRuleContext(MiniGoParser.Var_valueContext,0)


        def end_stmt(self):
            return self.getTypedRuleContext(MiniGoParser.End_stmtContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_decl_expl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_decl_expl" ):
                listener.enterVar_decl_expl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_decl_expl" ):
                listener.exitVar_decl_expl(self)




    def var_decl_expl(self):

        localctx = MiniGoParser.Var_decl_explContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_var_decl_expl)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 225
            self.match(MiniGoParser.Key_decl_var)
            self.state = 226
            self.match(MiniGoParser.Identifier)
            self.state = 227
            self.data_type()
            self.state = 228
            self.match(MiniGoParser.Ope_assign)
            self.state = 229
            self.var_value()
            self.state = 230
            self.end_stmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Var_valueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MiniGoParser.ExprContext,0)


        def full_array_literal(self):
            return self.getTypedRuleContext(MiniGoParser.Full_array_literalContext,0)


        def literal_struct(self):
            return self.getTypedRuleContext(MiniGoParser.Literal_structContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_var_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVar_value" ):
                listener.enterVar_value(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVar_value" ):
                listener.exitVar_value(self)




    def var_value(self):

        localctx = MiniGoParser.Var_valueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_var_value)
        try:
            self.state = 235
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 232
                self.expr(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 233
                self.full_array_literal()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 234
                self.literal_struct()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Data_typeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def primitive_type(self):
            return self.getTypedRuleContext(MiniGoParser.Primitive_typeContext,0)


        def Identifier(self):
            return self.getToken(MiniGoParser.Identifier, 0)

        def array_type(self):
            return self.getTypedRuleContext(MiniGoParser.Array_typeContext,0)


        def getRuleIndex(self):
            return MiniGoParser.RULE_data_type

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterData_type" ):
                listener.enterData_type(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitData_type" ):
                listener.exitData_type(self)




    def data_type(self):
